styles/small.css
body {
    font-size: 12px;
    line-height: 1.5;
    background-color: #303030;
}

header,
nav,
main,
footer {
    margin: 1.25rem auto;
    max-width: 800px;
}

header {
    padding: 1.5rem;
    display: grid;
    grid-template-rows: 80% 20%;
    align-items: center;
    justify-items: center;
}

header img {
    border: 1px solid white;
}

header,
footer {
    background-color: green;
    color: #e8eaed;
    text-align: center;
}

footer {
    padding: 0.5rem 1.5rem;
}

h1 {
    font-family: 'Bungee Spice', sans-serif;
}

h2 {
    font-family: 'Cairo', sans-serif;
    color: white;
}

p,
ul {
    font-family: 'Roboto Condensed', sans-serif;
    color: #e8eaed;
}

a {
    color: #C44900;
}

#home-assignments-container {
    padding: 0 1.5rem;
}

